# lgidcf

./: .gitignore  Cargo.toml  README.md  build.rs  lgidcf.rsproj  lgidcf.sln  todo.txt
devices/: minigun.json  rocket.json  testweapon.json
settings/: device.json  jetpack.json  settings.json
settings/devices/: minigun.json  rocket.json  testagain.json  testweapon.json
src/: app.rs  appdata.rs  device.rs  diagnostics.rs  gameobject.rs  main.rs  obstacle.rs  player.rs  projectile.rs  settings.rs
