[package]
name = "La Guerra Impresionante de Condenación Final"
version = "0.1.0"
authors = ["Joel W Kall"]

[[bin]]
name = "lgidcf"

[dependencies]
piston = "0.19.0"
piston2d-graphics = "0.16.0"
piston2d-opengl_graphics = "0.26.0"
piston_window = "0.47.0"
rand = "*"
rustc-serialize = "0.3.19"
gfx = "*"
gfx_text = "*"