[package]
name = "La Guerra Impresionante de Condenación Final"
version = "0.1.1"
authors = ["Joel W Kall"]
build = "build.rs"

[[bin]]
name = "lgidcf"

[dependencies]
piston = "*"
piston2d-graphics = "*"
piston2d-opengl_graphics = "*"
piston_window = "*"
rand = "*"
piston2d-gfx_graphics = "*"
gfx_device_gl = "*"
rustc-serialize = "0.3.19"
time = "0.1"
chrono = "*"